alignment fixes

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -10,6 +10,10 @@
     padding-top: 16px;
   }
 
+  p{
+      margin-left: 10px;
+  }
+
   .sidebar a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
